--- a/app/routes/sheet.folder.song.css
+++ b/app/routes/sheet.folder.song.css
@@ -6,12 +6,12 @@
 
   [data-name*="D"],
   [data-name*="d"] {
-    fill: #c084fc;
+    fill: #84cc16;
   }
 
   [data-name*="E"],
   [data-name*="e"] {
-    fill: #0f766e;
+    fill: #06b6d4;
   }
 
   [data-name*="F"],
@@ -26,7 +26,7 @@
 
   [data-name*="A"],
   [data-name*="a"] {
-    fill: #06b6d4;
+    fill: #166534;
   }
 
   [data-name*="B"],
